# uv-template-python313

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  main_test.py
